--- a/package.json
+++ b/package.json
@@ -2,18 +2,28 @@
   "name": "test.springs",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/tyshchenkosergey/test.springs.git"
   },
-  "author": "",
+  "author": "tyshchenko s.",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/tyshchenkosergey/test.springs/issues"
   },
-  "homepage": "https://github.com/tyshchenkosergey/test.springs#readme"
+  "homepage": "https://github.com/tyshchenkosergey/test.springs#readme",
+  "dependencies": {
+    "@hapi/joi": "^17.1.1",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.10.15",
+    "nodemon": "^2.0.6"
+  }
 }
